--- a/Projects/HolidayTrackerFrontEnd/HolidayTrackerFrontEnd/src/App.css
+++ b/Projects/HolidayTrackerFrontEnd/HolidayTrackerFrontEnd/src/App.css
@@ -1,5 +1,3 @@
-.active-link {
-    background-color: #6f42c1;
-    color: #fff;
-    font-weight: bold;
-  }
+.sidebar-menu-item:hover {
+  background-color: #640078; 
+}
