--- a/src/css/ReviewRequests.css
+++ b/src/css/ReviewRequests.css
@@ -10,6 +10,6 @@
 
   .table-cell-center {
     text-align: center;
-    vertical-align: top; /* Ensures vertical alignment at the top */
+    vertical-align: top; 
   }
   
