--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -12,7 +12,7 @@
   }
   
   .button-container .btn:first-child {
-    margin-left: 0;
+    margin-left: 350px;
   }
   
   .button-container .btn:last-child {
