--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,4 +1,3 @@
-
 h1 {
   font-size: 2.5rem; 
   text-align: center;
@@ -7,7 +6,7 @@ h1 {
 .custom-card {
   position: relative;
   overflow: hidden;
-  box-shadow: 0 1.125rem 0.5rem rgba(0, 0, 0, 1);
+  box-shadow: 0 1.125rem 0.5rem rgba(0, 0, 0, 0.1);
   height: 18.75rem; /* 300px */
   margin: 0.625rem; /* 10px */
   flex: 1 1 calc(25% - 1.25rem); /* 25% width minus the total horizontal margin */
@@ -50,7 +49,7 @@ h1 {
 
 @media (max-width: 1200px) {
   .custom-card {
-    flex: 1 1 calc(33.333% - 1.25rem); /* 3 cards per row */
+    flex: 1 1 calc(100% - 1.25rem); 
   }
 }
 
@@ -59,7 +58,7 @@ h1 {
     font-size: 2rem; 
   }
   .custom-card {
-    flex: 1 1 calc(50% - 1.25rem); /* 2 cards per row */
+    flex: 1 1 calc(100% - 1.25rem); 
   }
   .card-title {
     font-size: 1.25rem; 
@@ -79,19 +78,20 @@ h1 {
   }
 
   .card-title {
-    font-size: 1.5rem; 
+    font-size: 1rem; 
+  }
 
   .card-text {
-    font-size: 0.875rem; 
+    font-size: 0.75rem; 
+  }
 }
 
-/* Additional media query for smart phones screens  */
 @media (max-width: 400px) {
   h1 {
     font-size: 1.2rem; 
   }
   .custom-card {
-    margin: 0.2rem; /* Reduce margin */
+    margin: 0.2rem; 
     height: 16rem; /* Adjust height for smaller screens */
   }
 
@@ -101,11 +101,10 @@ h1 {
   }
 
   .card-title {
-    font-size: 0.2rem; 
+    font-size: 0.875rem; 
   }
 
   .card-text {
-    font-size: 0.1rem; 
+    font-size: 0.75rem; 
   }
 }
-  }}
