--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,16 +1,13 @@
+/* Dashboard.css */
 h1 {
-  font-size: 2.5rem; 
+  font-size: 1.5rem; 
   text-align: center;
-  margin: 1rem 0;
 }
+
 .custom-card {
   position: relative;
   overflow: hidden;
-  box-shadow: 0 1.125rem 0.5rem rgba(0, 0, 0, 0.1);
-  height: 18.75rem; /* 300px */
-  margin: 0.625rem; /* 10px */
   flex: 1 1 calc(25% - 1.25rem); /* 25% width minus the total horizontal margin */
-  min-width: 15.625rem; /* 250px */
 }
 
 .corner-icon {
@@ -19,7 +16,7 @@ h1 {
   right: 0;
   bottom: 0;
   width: 3.125rem; /* 50px */
-  padding: 0.625rem; /* 10px */
+  padding:0.625rem; /* 10px */
   font-size: 1.5rem;
   border-bottom-left-radius: 5px;
   display: flex;
@@ -29,15 +26,13 @@ h1 {
 }
 
 .card-title {
-  font-size: 1.75rem;
+  font-size: 0.75rem;
   text-align: left;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.171);
 }
 
 .card-text {
   font-size: 1rem;
   text-align: left;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.171);
 }
 
 .card-container {
@@ -49,19 +44,10 @@ h1 {
 
 @media (max-width: 1200px) {
   .custom-card {
-    flex: 1 1 calc(100% - 1.25rem); 
-  }
-}
-
-@media (max-width: 768px) {
-  h1 {
-    font-size: 2rem; 
-  }
-  .custom-card {
-    flex: 1 1 calc(100% - 1.25rem); 
+    flex: 1 1 calc(33.333% - 1.25rem); /* 3 cards per row */
   }
   .card-title {
-    font-size: 1.25rem; 
+    font-size: 0.25rem; 
   }
 
   .card-text {
@@ -69,8 +55,24 @@ h1 {
   }
 }
 
+@media (max-width: 576px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+  .custom-card {
+    flex: 1 1 calc(100% - 1.25rem); /* 1 card per row */
+  }
 
-@media (max-width: 320px) {
+  .card-title {
+    font-size: 1rem; 
+  }
+
+  .card-text {
+    font-size: 0.75rem; 
+  }
+}
+
+@media (max-width: 400px) {
   h1 {
     font-size: 1.2rem; 
   }
